chnages for minor project

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,6 @@ VITE_FIREBASE_STORAGE_BUCKET = ""
 VITE_FIREBASE_MESSAGING_SENDER_ID = ""
 VITE_FIREBASE_APP_ID = ""
 VITE_MEASUREMENT_ID = ""
+
+# your backend url = http://localhost:3000
+VITE_BACKEND_URL = ""
