--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@google/generative-ai": "^0.15.0",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@mapbox/polyline": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -34,13 +37,14 @@
     "react-google-autocomplete": "^2.7.5",
     "react-google-places-autocomplete": "^4.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.28.1",
     "react-spring": "^9.7.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.18",
